# hiremind_ai

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: deploy.yml
app/: main.py
app/api/v1/: deps.py
app/core/: config.py  exceptions.py  logging.py
app/db/: session.py
app/db/models/: __init__.py  base.py  candidate.py  candidate_children.py  duplicate_job_cluster.py  embeddings.py  fake_profile.py  ghost_job_score.py  hiring_outcome.py  hiring_prediction.py  job.py  match_score.py  ml_model.py  parse_job.py
app/db/repositories/: candidates.py  duplicate_jobs.py  fake_profile.py  ghost_jobs.py  hiring_predictions.py  jobs.py  match_scores.py  parse_jobs.py
app/llm/: __init__.py  base.py  factory.py  mock.py  openai_compatible.py  prompts.py
app/schemas/: candidate_preferences.py  common.py  duplicate_job.py  embeddings.py  fake_profile.py  ghost_job.py  hiring_predictor.py  job.py  match.py  ranker.py  resume_parser.py  vector_search.py
app/vector_store/: __init__.py  base.py  factory.py  pgvector.py
app/workers/: celery_app.py
db/: README.md  create_dev_databases.sh
db/init/: 02_schema.sql
db/init.legacy/: 01_extensions.sql  03_indexes.sql
frontend/: package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: FileTester.tsx  JsonTester.tsx
frontend/lib/: api.ts
scripts/: seed_candidates.sql  seed_hiring_outcomes.py  seed_jobs.sql  train_model.py
scripts/migrations/: 001_add_candidate_preferences.sql
(+55 files in other folders)
