[project]
name = "hrms-ai"
version = "0.1.0"
description = "AI subsystem for the HRMS recruitment platform."
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0.36",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3.6",
    "sentence-transformers>=3.0",
    "numpy>=1.26,<2.2",
    "structlog>=24.4",
    "tenacity>=9.0",
    "python-multipart>=0.0.17",
    "httpx>=0.27",
    "celery>=5.4",
    "redis>=5.2",
    "pypdf>=5.1",
    "python-docx>=1.1",
    "pytesseract>=0.3.13",
    "pdf2image>=1.17",
    "pillow>=11.0",
    "rapidfuzz>=3.10",
    "xgboost>=2.1",
    "shap>=0.46",
    "joblib>=1.4",
    "scikit-learn>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]
